--- a/solution/docker-compose.yaml
+++ b/solution/docker-compose.yaml
@@ -9,3 +9,13 @@ services:
      CSVSERVER_BORDER: Orange
     ports:
      - "9393:9300"
+  prometheus:
+    image: prom/prometheus:v2.22.0
+    container_name: prometheus
+    volumes:
+     - /home/athul/Documents/assessment/csvserver/solution/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+     - "9090:9090"
+    links:
+     - csvserver
+      
